# prueba_codex_proxy_ia

./: .gitignore  Cargo.toml  README.md
src/: main.rs  proxy.rs  settings.rs
